change EventTests